--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
+    <style>
+        img{
+            width:300px
+        }
+    </style>
 </head>
 <body>
     <h1>Mern Stack</h1>
@@ -15,6 +20,7 @@
 
     <hr>
     <br>
+    <h2 id="title">Web Images</h2>
    
    <footer>
     <button> <a target="_blank" href="/contact.html" 
@@ -23,10 +29,14 @@
         <a target="_blank "href="./courses/mern.html">Mern</a>
         <br>
         <a href="./courses/upcoming/ai.html">AI</a>
+        <a href="./revision.html">revision</a>
    </footer>
 <script src="./javaScript/index.js"></script>
-
+ <!-- <script src="./javaScript/finding_countrycode.js"></script> -->
+ 
 
 
 </body>
 </html>
+
+
